tests/sout/linenum1.eqx.out
Error occurred at line: 4
  002.  : nested3
  003.    ( errror comes here)
=>004.    nil "Invalid concat" .. ;
  005.  
  006.  : nested2 nested3 ;

