tests/sout/linenum1.eqx
\ throw an error
: nested3
  ( errror comes here)
  nil "invalid concat" .. ;

: nested2 nested3 ;
: nested1 nested2 ;

: babbage
  1
  begin
    1 +
    \ "xx" error/1
    dup dup *
    nested1
    1000000 %
    \ call the faulty word
    nested3
    269696 =
  until ;

babbage
